feat: Enhanced CORS configuration with full customization
- Added comprehensive CORS configuration in application.yml
- Configurable allowed origins (localhost:3000, 4200, 5173, 8080)
- Configurable HTTP methods (GET, POST, PUT, DELETE, PATCH, OPTIONS)
- Flexible headers configuration (supports wildcards)
- Exposed headers for pagination and authentication
- Support for credentials (cookies, auth headers)
- Configurable max-age for preflight caching (1 hour)
- Created CORS_CONFIGURATION.md documentation
- All tests passing (7/7)